networking/cert-manager/default-ing-prod.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
  name: default-backend
  namespace: default
spec:
  tls:
  - hosts:
    - k8s.castlerock.ai
    - "*.k8s.castlerock.ai"
    secretName: k8s-root-tls
  rules:
    - host: k8s.castlerock.ai
      http:
        paths:
        - backend:
            serviceName: default-backend
            servicePort: 80
    - host: "*.k8s.castlerock.ai"
      http:
        paths:
        - backend:
            serviceName: default-backend
            servicePort: 80
